link_directories("../feature")
link_directories("../calib_loader")
link_directories("/usr/local/lib/colmap/")
link_directories("../file_reader")
link_directories("../estimate")
link_directories("../pnp")
link_directories("../")
include_directories(${WORKSPACE_DIR})

add_executable(col_pair_test colmap_pair_test.cpp)
  target_include_directories(
    col_pair_test PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}" "${COLMAP_INCLUDE_DIRS}")
  target_link_libraries(
    col_pair_test PUBLIC Eigen3::Eigen ${COLMAP_LIBRARIES} ${absl_LIBRARIES}
    colmap_pair)

add_executable(dram_det_test dram_det_test.cpp)
target_include_directories(
  dram_det_test PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}" "${COLMAP_INCLUDE_DIRS}")
target_link_libraries(
  dram_det_test PUBLIC Eigen3::Eigen ${COLMAP_LIBRARIES} pnp_data adj_quat)
    

add_library(tum_test STATIC
tum_rgbd_test.h
tum_rgbd_test.cpp
)
target_include_directories(
  tum_test PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}" "${COLMAP_INCLUDE_DIRS}")
target_link_libraries(
  tum_test PUBLIC Eigen3::Eigen ${COLMAP_LIBRARIES})

add_executable(tum_bundle_test tum_bundle_test.cpp)
  target_include_directories(
    tum_bundle_test PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}" "${COLMAP_INCLUDE_DIRS}")
  target_link_libraries(
    tum_bundle_test PUBLIC Eigen3::Eigen ${COLMAP_LIBRARIES} ${absl_LIBRARIES}
  tum math_help tum_test)
  

add_library(test_util STATIC
test_util.h
test_util.cpp
)
target_include_directories(
  test_util PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}" "${COLMAP_INCLUDE_DIRS}")
target_link_libraries(
  test_util PUBLIC Eigen3::Eigen ${COLMAP_LIBRARIES} img sift)

add_library(horn STATIC
horn_test.h
horn_test.cpp
)
target_include_directories(
  horn PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}" "${COLMAP_INCLUDE_DIRS}")
target_link_libraries(
  horn PUBLIC Eigen3::Eigen ${COLMAP_LIBRARIES})

add_executable(rot_test rot_test.cpp)
target_include_directories(
rot_test PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}" "${COLMAP_INCLUDE_DIRS}")
target_link_libraries(
rot_test PUBLIC Eigen3::Eigen ${COLMAP_LIBRARIES} ${absl_LIBRARIES}
horn adj_quat math_help)

add_executable(plain_pnp plain_pnp_test.cpp)
target_include_directories(
plain_pnp PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}" "${COLMAP_INCLUDE_DIRS}")
target_link_libraries(
plain_pnp PUBLIC Eigen3::Eigen ${COLMAP_LIBRARIES} ${absl_LIBRARIES}
test_util lhm lsq)

# this implementation is from code generated by chatgpt, which serves
# similar purpose to the reproj_test code
add_executable(ceres_gpt ceres_test.cpp)
target_include_directories(
ceres_gpt PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}" "${COLMAP_INCLUDE_DIRS}")
target_link_libraries(
ceres_gpt PUBLIC Eigen3::Eigen ${COLMAP_LIBRARIES} ${absl_LIBRARIES}
img sift test_util)

add_executable(reproj reproj_test.cpp)
target_include_directories(
  reproj PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}" "${COLMAP_INCLUDE_DIRS}")
target_link_libraries(
  reproj PUBLIC Eigen3::Eigen ${COLMAP_LIBRARIES} ${absl_LIBRARIES}
  img sift stream init increment)

add_executable(feature_sift feature_sift_test.cpp)
target_include_directories(
feature_sift PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}" "${COLMAP_INCLUDE_DIRS}")
target_link_libraries(
feature_sift PUBLIC Eigen3::Eigen ${COLMAP_LIBRARIES} img sift test_util)

add_executable(essential_matrix essential_matrix_test.cpp)
target_include_directories(
essential_matrix PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}" "${COLMAP_INCLUDE_DIRS}")
target_link_libraries(
essential_matrix PUBLIC Eigen3::Eigen ${COLMAP_LIBRARIES} img sift 
math_help file_option sift_colmap)

add_executable(ransac ransac_test.cpp)
target_include_directories(
ransac PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}" "${COLMAP_INCLUDE_DIRS}")
target_link_libraries(
ransac PUBLIC Eigen3::Eigen ${COLMAP_LIBRARIES} img sift test_util)

add_executable(library_test library_test.cpp)
target_include_directories(
  library_test PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}" "${COLMAP_INCLUDE_DIRS}" 
  "${OpenCV_INCLUDE_DIRS}")
target_link_libraries(
  library_test PUBLIC Eigen3::Eigen ${COLMAP_LIBRARIES} ${OpenCV_LIBRARIES}
  ${absl_LIBRARIES})

add_executable(opencv_test open_cv_test.cpp)
target_include_directories(
  opencv_test PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}" "${COLMAP_INCLUDE_DIRS}" 
  "${OpenCV_INCLUDE_DIRS}")
target_link_libraries(
  opencv_test PUBLIC Eigen3::Eigen ${COLMAP_LIBRARIES} ${OpenCV_LIBRARIES}
  ${absl_LIBRARIES} test_util)

add_executable(file_reader_test file_reader_test.cpp)
target_include_directories(
  file_reader_test PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}" "${COLMAP_INCLUDE_DIRS}" 
  "${OpenCV_INCLUDE_DIRS}")
target_link_libraries(
  file_reader_test PUBLIC Eigen3::Eigen ${COLMAP_LIBRARIES} ${OpenCV_LIBRARIES}
  ${absl_LIBRARIES} gyro stream kitti_odo file_option data_type 
  calib_base colmap_intr)

add_executable(residual residual_cost_test.cpp)
target_include_directories(
  residual PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}" "${COLMAP_INCLUDE_DIRS}")
target_link_libraries(
  residual PUBLIC Eigen3::Eigen ${COLMAP_LIBRARIES} ${absl_LIBRARIES})

add_executable(eigen_quat eigen_quat_test.cpp)
target_include_directories(
  eigen_quat PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}" "${COLMAP_INCLUDE_DIRS}" 
  "${OpenCV_INCLUDE_DIRS}")
target_link_libraries(
  eigen_quat PUBLIC Eigen3::Eigen ${COLMAP_LIBRARIES} ${OpenCV_LIBRARIES}
  ${absl_LIBRARIES})